--- a/.azure/azure-pipelines-vcpkg.yml
+++ b/.azure/azure-pipelines-vcpkg.yml
@@ -75,7 +75,7 @@ jobs:
         cd $VCPKG_INSTALLATION_ROOT
         # git checkout master
         git remote -v
-        git fetch --unshallow --tags --prune --progress origin
+        git fetch --tags --prune --progress origin
         git checkout --force $(VCPKG_REVISION)
         sed -i 's/arm64/arm/g' ports/glib/portfile.cmake
         ./bootstrap-vcpkg.sh
