--- a/.azure/azure-pipelines-vcpkg.yml
+++ b/.azure/azure-pipelines-vcpkg.yml
@@ -69,8 +69,8 @@ jobs:
         # ninja --version
         cmake --version
         rm -rf C:/Strawberry/perl/bin/pkg-config*
-        choco install --svc --sdc -i pkgconfiglite &
-        chocoTask=$!
+        choco install --svc --sdc -i pkgconfiglite
+        # chocoTask=$!
         # manually update vcpkg
         cd $VCPKG_INSTALLATION_ROOT
         # git checkout master
@@ -79,7 +79,7 @@ jobs:
         git checkout --force $(VCPKG_REVISION)
         sed -i 's/arm64/arm/g' ports/glib/portfile.cmake
         ./bootstrap-vcpkg.sh
-        wait $chocoTask
+        # wait $chocoTask
         which pkg-config
       displayName: 'Update vcpkg'
     - task: DownloadBuildArtifacts@0
